# CaseDiscord

./: README.md
case-backend/: .env  Dockerfile  db.sqlite3  docker-compose.yaml  pyproject.toml
case-backend/app/: asgi.py  settings.py  urls.py  wsgi.py
case-backend/auth/: models.py  serializers.py  service.py  urls.py  views.py
case-backend/auth/migrations/: 0001_initial.py
case-backend/channel/: admin.py  models.py  serializers.py  service.py  urls.py  views.py
case-backend/channel/migrations/: 0001_initial.py  0002_discordchannel_discord_id.py  0003_alter_discordchannel_discord_id.py
case-backend/group/: admin.py  models.py  serializers.py  service.py  urls.py  views.py
case-backend/group/migrations/: 0001_initial.py
case-backend/rabbitmq/: rabbitmq.py
